--- a/writeup/main.bib
+++ b/writeup/main.bib
@@ -38,3 +38,9 @@ isbn="978-3-642-33027-8",
 doi="10.1007/978-3-642-33027-8_31",
 url="http://dx.doi.org/10.1007/978-3-642-33027-8_31"
 }
+
+@inproceedings{ reduction,
+  author        = {Erdem Alkim and Nina Bindel and Johannes Buchmann and \"{O}zg\"{u}r Dagdelen},
+  title         = {TESLA: Tightly-secure efficient signatures from standard lattices},
+  year          = {2016}
+}
